Fixing landing page overflow and container issues after importing CSS from other project. Committing and pushing to github

--- a/src/scss/components/includes/JumboNav.scss
+++ b/src/scss/components/includes/JumboNav.scss
@@ -60,6 +60,8 @@
 // MAIN NAVBAR ============================================
 .navColor{
     position: relative;
+    margin-bottom: 1rem;
+    border-bottom: 1px solid #e9e9e9;
     @media only screen and (max-width: 768px){
         background-color: rgba(248, 249, 250);
         .navbar-toggler{
@@ -67,6 +69,9 @@
             right: 10px;
             top: 10px;
         }
+    }
+    &.navbar{
+        padding: 0;
     }
     .deskMenu{
         --bs-gutter-x: 0;
@@ -115,6 +120,8 @@
             }
             .nav-link{
                 padding: 0 .5rem;
+                display: flex;
+                align-items: center;
                 @media only screen and (max-width: 768px){
                     padding: 0 .25rem;
                 }
@@ -186,7 +193,6 @@
 .collapseMenu {
     margin: 0;
     padding-left: 1rem;
-    border-bottom: 1px solid #e9e9e9;
     .hoverMenu{
         visibility: hidden;
         padding: 1rem;
